--- a/static/css/normalUserReviewListTemplate.scss
+++ b/static/css/normalUserReviewListTemplate.scss
@@ -3,7 +3,76 @@ a.link-secondary {
   font-weight: bold;
   text-decoration: none;
 }
-div#reviews{
+#reviews_div{
+  height:89.39%;
   overflow-y:scroll;
   overflow-x:hidden;
+}
+#reviews{
+  margin-left:6.25%;
+  margin-right:21.47%;
+  height:100%;
+}
+#reviews_div::-webkit-scrollbar{
+  width:18px;
+}
+#reviews_div::-webkit-scrollbar-thumb{
+  background-color:#C6C6C6;
+}
+#reviews_div::-webkit-scrollbar-track{
+  background-color:#FFFFFF;
+}
+.review{
+  width:100%;
+  height:21.47%;
+  padding-top:2.6%;
+  padding-bottom:2.6%;
+  font-size:0;
+}
+.review_image{
+  position:relative;
+  display:inline-block;
+  height:100%;
+  width:15.15%;
+  float:left;
+}
+.review_info{
+  position:relative;
+  display:inline-block;
+  width:81.11%;
+  height:100%;
+  margin-left:3.73%;
+}
+.review_title{
+  width:100%;
+  height:34.615%;
+  line-height:1;
+}
+.review_preview{
+  width:100%;
+  height:34.615%;
+  line-height:1;
+  color:#888888;
+}
+.review_icons{
+  width:100%;
+  height:30.77%;
+  overflow-y:hidden;
+  overflow-x:scroll;
+}
+.review_icons::-webkit-scrollbar{
+  height:5px;
+}
+.review_icons::-webkit-scrollbar-thumb{
+  background-color:#C6C6C6;
+}
+.review_icons::-webkit-scrollbar-track{
+  background-color:#FFFFFF;
+}
+.icon{
+  position:relative;
+  display:inline-block;
+  width:5.755%;
+  height:100%;
+  margin-right:1.151%;
 }
