리뷰 검색 필터 디자인

--- a/static/css/normalUserReviewSearchTemplate.css
+++ b/static/css/normalUserReviewSearchTemplate.css
@@ -68,4 +68,7 @@ button#searchFormOpen {
   margin-bottom: 10px;
 }
 
+#commom_info_selects > label {
+    font-size:40px;
+}
 /*# sourceMappingURL=normalUserReviewSearchTemplate.css.map */
