--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
         {% endblock %}
     </div>
     <div id="midContent">
-        <div class="middle" id="leftSideMenu" style="border:2px solid #B3B3B3; border-left:none; width:20% ;">
+        <div class="middle" id="leftSideMenu" style="border:2px solid #B3B3B3; border-left:none; width:20%; ">
             {% block left_side_bar %}
             {% endblock %}
         </div>
@@ -47,7 +47,7 @@
         </div>
 
     </div>
-    <div id="bottomInfoBox">
+    <div id="bottomInfoBox" style ="background-color: silver; width:100vw; height:10vh;">
         <!-이 공간은 팀 정보를 저장하기 위한 공간입니다.-->
     </div>
 </body>
