--- a/templates/review_search.html
+++ b/templates/review_search.html
@@ -1,41 +1,102 @@
-{% extends 'normal_user_review_listsearch.html' %}
+{% extends 'normal_user_review_list.html' %}
 {% load static %}
 {% block left_side_bar %}
-    <link rel="stylesheet" href="{% static 'css/normalUserRoomReadTemplate.css' %}">
-    <div style="text-align:left;" >
-        <div style ="font-size : 25px;">
-            <strong><span><br>리뷰 검색 필터</span></strong>
-        </div>
-    <div>
-            <span><br>포함된 아이콘</span><span><br>
-    <label><input type="checkbox" name="color" value="blue"> ♬ </label>
-      <label><input type="checkbox" name="color" value="red"> ★ </label>
-        <label><input type="checkbox" name="color" value="blue"> ● </label>
-      <label><input type="checkbox" name="color" value="red"> △ </label>
-    </span>
-        </div>
-    <div>
-        <span><br> 리뷰 작성일</span><br>
-        <div style="display: inline-block;">
-            <select name="sort_select_box" onchange="sort()">
-            <option value="1">시작일</option>
-        </select>
+<link rel="stylesheet" href="{% static 'css/normalUserRoomSearchTemplate.css' %}">
+<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" />
+
+    <div id='room_search_form' style="text-align:left; width:88.54%; height:66.16%;" >
+        <form id="search_filter" action="{{normalUserRoomSearchTest}}" method="get">
+            <div style="width:100%; height:6.11%;" id="room_search_filter">
+                <span style="display:block; line-height:1; height:100%;font-weight:bolder; margin : 10px 5.7% 0px 5.7%; ">리뷰 검색 필터 </span>
             </div>
-            ~
-        <div style="display: inline-block;">
-            <select name="sort_select_box" onchange="sort()">
-            <option value="1">종료일</option>
-        </select>
+            <script>
+                let a = (document.getElementById('room_search_filter').offsetHeight/16).toString()+'em';
+                document.getElementById('room_search_filter').style.fontSize=a;
+            </script>
+            <div style="width:98.32%; height:21.37%; margin:15px">
+                <div id="common_info_filter" style="width:100%; height:21.429%;">
+                    <span style="display:block; height:100%;margin-top:40px;">포함된 아이콘</span>
+                </div>
+                <script>
+                    a = (document.getElementById('common_info_filter').offsetHeight/16).toString()+'em';
+                    document.getElementById('common_info_filter').style.fontSize=a;
+                </script>
+
+                <div id="icon_style" style = "font-size : 30px;">
+                    <a><label><input type="checkbox" name="color" value="blue">
+                    <i class="fa fa-home fa-fw"></i>
+                    </label></a>
+                    <label><input type="checkbox" name="color" value="red">
+                    <i class="fa fa-spinner fa-spin fa-fw"></i> <span class="sr-only"></span>
+                    </label>
+                    <label><input type="checkbox" name="color" value="blue">
+                    <span style="color:red"><i class="fa fa-camera-retro fa-fw"></i></span>
+                        </label>
+                    <label><input type="checkbox" name="color" value="blue">
+                    <span style="color:red"><i class="fa fa-spinner fa-fw"></i></span>
+                        </label>
+                    <label><input type="checkbox" name="color" value="blue">
+                    <span style="color:red"><i class="fa fa-refresh fa-fw"></i></span>
+                        </label>
+                    <label><input type="checkbox" name="color" value="blue">
+                    <span style="color:red"><i class="fa fa-refresh fa-fw"></i></span>
+                        </label>
+                    <label><input type="checkbox" name="color" value="blue">
+                    <span style="color:red"><i class="fa fa-refresh fa-fw"></i></span>
+                        </label>
+                    <label><input type="checkbox" name="color" value="blue">
+                    <span style="color:red"><i class="fa fa-refresh fa-fw"></i></span>
+                        </label>
+                </div>
+                <script>
+                    let b = Array.from(document.getElementById('common_info_selects').children);
+                    b.forEach(function(o){
+                        a=(o.offsetHeight/16).toString()+'em';
+                        o.style.fontSize=a;
+                    });
+                </script>
             </div>
-    </div>
-    <div>
-        <span><br> 검색 테스트</span><br><span>
-        <form CLASS="nav-item col-3" action="{{normalUserReviewSearch}}" id="search-form" style="top:10px;">
-            <div class="nav-item col-9">
-            <input style="width : 200px;"class="form-control" type="search" placeholder="주소로 리뷰 검색" aria-label="Search" id="address" name="address">
-        </div>
-    </form> </span>
-        </div>
+
+            <div id="built_year_form">
+                <div id="built_year_filter">
+                    <span style="display:block; line-height:1; margin:40px 2% 0px 2%;">리뷰 작성일</span>
+                </div>
+                <script>
+                    a=(document.getElementById('built_year_filter').offsetHeight/16).toString()+'em';
+                    document.getElementById('built_year_filter').style.fontSize=a;
+                </script>
+                <div id="built_year_selects">
+                    <div id="built_year_selects_div">
+                        <select id="writtenstart" name="builtFrom"></select>
+                            ~
+                        <select id="writtenend" name="builtTo\"></select>
+                    </div>
+                    <script>
+                        a=((document.getElementById('builtFrom').offsetHeight-6)/16).toString()+'em';
+                        document.getElementById('builtFrom').style.fontSize=a;
+                        b=((document.getElementById('builtTo').offsetHeight-6)/16).toString()+'em';
+                        document.getElementById('builtTo').style.fontSize=b;
+                    </script>
+                </div>
+            </div>
+            <div id="text_form">
+                <div id="search_address" style="margin:40px 5.7% 0px 5.7%;">검색할 리뷰</div>
+                <script>
+                    a=(document.getElementById('search_address').offsetHeight/16).toString()+'em';
+                    document.getElementById('search_address').style.fontSize=a;
+                </script>
+                <div id="address_filter" style="margin:25px 2% 0px 2%;">
+                    <input class="form-control" type="search" placeholder="주소 입력" aria-label="Search" id="address2" name="address">
+                </div>
+            </div>
+            <div id="submit-div">
+                <a href="javascript:(0)" onclick="document.getElementById('search_filter').submit();" id="submit">적용</a>
+            </div>
+            <script>
+                a=(document.getElementById('submit-div').offsetHeight/16).toString()+'em';
+                document.getElementById('submit').style.fontSize=a;
+            </script>
+        </form>
     </div>
 {% endblock %}
 
