--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
         </div>
 
     </div>
-    <div id="bottomInfoBox" style ="background-color: silver; width:100vw; height:10vh;">
+    <div id="bottomInfoBox" style ="background-color: silver; width:100%; height:10vh;">
         <!-이 공간은 팀 정보를 저장하기 위한 공간입니다.-->
     </div>
 </body>
