--- a/templates/review_search.html
+++ b/templates/review_search.html
@@ -1,31 +1,31 @@
 {% extends 'normal_user_review_list.html' %}
 {% load static %}
 {% block left_side_bar %}
-<link rel="stylesheet" href="{% static 'css/normalUserRoomSearchTemplate.css' %}">
+<link rel="stylesheet" href="{% static 'css/normalUserReviewSearchTemplate.css' %}">
 <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" />
 
-    <div id='room_search_form' style="text-align:left; width:88.54%; height:66.16%;" >
-        <form id="search_filter" action="{{normalUserRoomSearchTest}}" method="get">
-            <div style="width:100%; height:6.11%;" id="room_search_filter">
-                <span style="display:block; line-height:1; height:100%;font-weight:bolder; margin : 10px 5.7% 0px 5.7%; ">리뷰 검색 필터 </span>
+    <div id='review_search_form' style="text-align:left; width:88.54%; height:66.16%;" >
+        <form id="search_filter" action="{{normalUserReviewSearch}}" method="get">
+            <div style="width:100%; height:6.11%;" id="review_search_filter">
+                <span style="display:block; line-height:1; height:100%;font-weight:bolder;">리뷰 검색 필터 </span>
             </div>
             <script>
-                let a = (document.getElementById('room_search_filter').offsetHeight/16).toString()+'em';
-                document.getElementById('room_search_filter').style.fontSize=a;
+                let a = (document.getElementById('review_search_filter').offsetHeight/16).toString()+'em';
+                document.getElementById('review_search_filter').style.fontSize=a;
             </script>
-            <div style="width:98.32%; height:21.37%; margin:15px">
-                <div id="common_info_filter" style="width:100%; height:21.429%;">
-                    <span style="display:block; height:100%;margin-top:40px;">포함된 아이콘</span>
+            <div style="width:98.32%; height:21.37%;" id="review_icon_form">
+                <div id="review_icon_filter" style="width:100%; height:21.429%;">
+                    <span style="display:block; height:100%;line-height:1;">포함된 아이콘</span>
                 </div>
                 <script>
-                    a = (document.getElementById('common_info_filter').offsetHeight/16).toString()+'em';
-                    document.getElementById('common_info_filter').style.fontSize=a;
+                    a = (document.getElementById('review_icon_filter').offsetHeight/16).toString()+'em';
+                    document.getElementById('review_icon_filter').style.fontSize=a;
                 </script>
 
-                <div id="icon_style" style = "font-size : 30px;">
-                    <a><label><input type="checkbox" name="color" value="blue">
-                    <i class="fa fa-home fa-fw"></i>
-                    </label></a>
+                <div id="review_icon_selects">
+                    <label><input type="checkbox" name="color" value="blue">
+                    <i  class="fa fa-home fa-fw"></i>
+                    </label>
                     <label><input type="checkbox" name="color" value="red">
                     <i class="fa fa-spinner fa-spin fa-fw"></i> <span class="sr-only"></span>
                     </label>
@@ -49,43 +49,42 @@
                         </label>
                 </div>
                 <script>
-                    let b = Array.from(document.getElementById('common_info_selects').children);
+                    let b = Array.from(document.getElementById('review_icon_selects').children);
                     b.forEach(function(o){
                         a=(o.offsetHeight/16).toString()+'em';
                         o.style.fontSize=a;
                     });
                 </script>
             </div>
-
-            <div id="built_year_form">
-                <div id="built_year_filter">
-                    <span style="display:block; line-height:1; margin:40px 2% 0px 2%;">리뷰 작성일</span>
+            <div id="written_date_form">
+                <div id="written_date_filter">
+                    <span style="display:block; line-height:1; margin:40px 2% 0 2%;">리뷰 작성일</span>
                 </div>
                 <script>
-                    a=(document.getElementById('built_year_filter').offsetHeight/16).toString()+'em';
-                    document.getElementById('built_year_filter').style.fontSize=a;
+                    a=(document.getElementById('written_date_filter').offsetHeight/16).toString()+'em';
+                    document.getElementById('written_date_filter').style.fontSize=a;
                 </script>
-                <div id="built_year_selects">
-                    <div id="built_year_selects_div">
-                        <select id="writtenstart" name="builtFrom"></select>
+                <div id="written_date_selects">
+                    <div id="written_date_selects_div">
+                        <select id="writtenStart" name="writtenStart"></select>
                             ~
-                        <select id="writtenend" name="builtTo\"></select>
+                        <select id="writtenEnd" name="writtenEnd"></select>
                     </div>
                     <script>
-                        a=((document.getElementById('builtFrom').offsetHeight-6)/16).toString()+'em';
-                        document.getElementById('builtFrom').style.fontSize=a;
-                        b=((document.getElementById('builtTo').offsetHeight-6)/16).toString()+'em';
-                        document.getElementById('builtTo').style.fontSize=b;
+                        a=((document.getElementById('writtenStart').offsetHeight-6)/16).toString()+'em';
+                        document.getElementById('writtenStart').style.fontSize=a;
+                        b=((document.getElementById('writtenEnd').offsetHeight-6)/16).toString()+'em';
+                        document.getElementById('writtenEnd').style.fontSize=b;
                     </script>
                 </div>
             </div>
             <div id="text_form">
-                <div id="search_address" style="margin:40px 5.7% 0px 5.7%;">검색할 리뷰</div>
+                <div id="search_address">검색할 주소</div>
                 <script>
                     a=(document.getElementById('search_address').offsetHeight/16).toString()+'em';
                     document.getElementById('search_address').style.fontSize=a;
                 </script>
-                <div id="address_filter" style="margin:25px 2% 0px 2%;">
+                <div id="address_filter">
                     <input class="form-control" type="search" placeholder="주소 입력" aria-label="Search" id="address2" name="address">
                 </div>
             </div>
