--- a/static/css/baseTemplate.scss
+++ b/static/css/baseTemplate.scss
@@ -3,34 +3,29 @@ body{
   font-family:'Noto Sans KR', sans-serif !important;
   min-height:600px;
   min-width:1200px;
+  height:100vh;
+  width:100vw;
 }
-div#headMenu{
-  width:auto;
-  height:7.5vh;
-  min-height:45px;
-  border-bottom:2px solid #B3B3B3;
+#headMenu{
+  width:100%;
+  height:7.5%;
   background-color:#A23355;
 }
-#logo{
+#headMenu>div{
   display:inline-block;
   float:left;
   height:100%;
 }
+#logo{
+  float:right;
+  height:100%;
+  width:50%;
+}
 div#midContent{
   display:block;
   position:relative;
-  height:82.5vh;
-  min-height:495px;
+  height:82.5%;
   width:100%;
-}
-div#leftSideMenu{
-  min-width:20vh;
-}
-div#mainDiv{
-  min-width:60vh;
-}
-div#rightSideMenu{
-  min-width:20vh;
 }
 div.middle{
   display:inline-block;
@@ -40,9 +35,5 @@ div.middle{
 div#bottomInfoBox{
   position:relative;
   background-color:#B3B3B3;
-  border:2px solid #B3B3B3;
-  border-bottom:none;
-  border-collapse:collapse;
-  height:10vh;
-  min-height:60px;
+  height:10%;
 }
