--- a/static/css/normalUserBaseTemplate.scss
+++ b/static/css/normalUserBaseTemplate.scss
@@ -1,36 +1,66 @@
 @import "color.scss";
 
-div#mainMenu{
-    display:inline-block;
-    left:250px;
+#introduce{
+    display:flex;
+    width:100%;
+    height:100%;
+    align-items:center;
+    justify-content:center;
 }
-div#mainMenu>div.button{
-    height:50px;
-    border-width:1px;
-}
-div#mainMenu>div.button>a{
-    display:inline;
+.drpd{
+    cursor:pointer;
     color:white;
-    text-decoration:none;
-    height:50px;
 }
-div#userInfo{
+#room_main{
+    display:flex;
+    width:100%;
+    height:100%;
+    align-items:center;
+    justify-content:center;
+}
+#review_main{
+    display:flex;
+    width:100%;
+    height:100%;
+    align-items:center;
+    justify-content:center;
+}
+.drpd-content{
+    display: none;
+    position: absolute;
+    z-index:2;
+    width:100%;
+    height:100%;
+    top:100%;
+    background-color:white;
+    align-items:center;
+    justify-content:center;
+    border:1px solid #A23355;
+}
+.drpd-sub{
+    height:50%;
+    text-align:center;
+    color:black;
+}
+.drpd-sub:hover{
+    background-color:#F4DBE3;
+}
+#userInfo{
     display:inline-block;
 }
-a#login{
-    height:50px;
+#login{
     display:inline-block;
     float:left;
     color:white;
     text-decoration:none;
 }
-form#search-form{
+#search-form{
     display:inline-block;
     float:left;
 }
-button#myInfo{
-    height:50px;
+#userInfo{
     display:inline-block;
+    height:50px;
     float:left;
 }
 .nav-item{
