--- a/templates/normal_user_review_write.html
+++ b/templates/normal_user_review_write.html
@@ -3,26 +3,6 @@
 {% url 'user-detail' pk=u_id as singleUser %}
 
 {% block main_contents %}
-    <style>
-        li {
-            list-style: none;
-        }
-
-        img {
-            width: 6.2vw;
-            height: 10vh;
-            list-style: none;
-        }
-
-        .image-preview {
-            padding-left: 0;
-            width: 500px;
-            height: 200px;
-            background-color: aquamarine;
-            display: flex;
-            gap: 1.6vw;
-        }
-    </style>
     <link rel="stylesheet" href="{% static 'css/normalUserReviewWriteTemplate.css' %}">
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <div id="icons" style="position:relative; display:none; float:left; height:500px; width:200px; border:1px solid green;"></div>
@@ -33,21 +13,21 @@
                 <div style="background-color: #A23355; color: white; width: 5.5vw; height: 5vh;
                         text-align: center; margin: 0 auto">주소</div>
                 <input id="id_address" style="float: right; height: 5vh; border-color: #A23355;
-                        flex:1" required>
+                        flex:1" name="address" required>
             </div>
             <div style="height: 7.5vh; width: 100%; padding-top: 2.5vh">
-                <input style="width: 100%; height: 5vh; text-align: left; border-color: #B3B3B3"
+                <input style="width: 100%; height: 5vh; text-align: left; border-color: #B3B3B3" name="title"
                        placeholder="제목을 입력하세요">
             </div>
             <div style="padding-top: 2.5vh">
-                <input style="height: 43.3vh; width: 100%; border-color: #B3B3B3"
+                <input style="height: 43.3vh; width: 100%; border-color: #B3B3B3" name="review_sentence"
                        placeholder="리뷰 본문을 입력하세요">
             </div>
             <div style="padding-top: 3vh">
                 <ul class="image-preview"></ul> {# 업로드한 이미지 띄우는 부분 #}
 
                 <div style="float: right">
-                    <input type="file" class="real-upload" accept="image/*" required multiple>
+                    <input type="file" class="real-upload" accept="image/*" multiple id="images" name="images">
                     <input value="리뷰 등록" type="submit" style="background-color: #A4A1A1; border-color:#888888;
                     color: white">
                 </div>
