--- a/static/css/normalUserBaseTemplate.css
+++ b/static/css/normalUserBaseTemplate.css
@@ -54,16 +54,34 @@
   display: inline-block;
 }
 
-#login {
-  display: inline-block;
-  float: left;
-  color: white;
-  text-decoration: none;
+#search-form-div {
+  height: 100%;
 }
 
 #search-form {
-  display: inline-block;
-  float: left;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#search-addr {
+  height: 66.67%;
+  width: 100%;
+}
+
+#address {
+  height: 100%;
+  width: 100%;
+}
+
+#login {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 #userInfo {
