상단메뉴: 하위메뉴 '리뷰 작성' 페이지 이동 추가

--- a/templates/normal_user_base.html
+++ b/templates/normal_user_base.html
@@ -40,7 +40,7 @@
         </div>
         <div id="review_sub" class="drpd-content">
             <div id="review_search" class="drpd-sub" onclick="window.location.replace('{{normalUserReviewSearch}}')"><span>리뷰 검색</span></div>
-            <div id="review_write" class="drpd-sub"><span>리뷰 작성</span></div>
+            <div id="review_write" class="drpd-sub" onclick="window.location.replace('{{normalUserReviewWrite}}')"><span>리뷰 작성</span></div>
         </div>
     </div>
 </div>
