--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 {% url 'loginPage' as loginPage %}
 {% url 'infoCheck' as infoCheck %}
 {% url 'normalUserReviewSearch' as normalUserReviewSearch %}
+{% url 'normalUserReviewWrite' as normalUserReviewWrite %}
 {% url 'normalUserRoomSearch' as normalUserRoomSearch %}
 {% url 'normalUserReviewRead' as normalUserReviewRead %}
 {% url 'wroteReviews' as wroteReviews %}
