--- a/templates/review_search.html
+++ b/templates/review_search.html
@@ -27,7 +27,7 @@
                     <i  class="fa fa-home fa-fw"></i>
                     </label>
                     <label><input type="checkbox" name="color" value="red">
-                    <i class="fa fa-spinner fa-spin fa-fw"></i> <span class="sr-only"></span>
+                    <span class="sr-only"><i class="fa fa-spinner fa-spin fa-fw"></i></span>
                     </label>
                     <label><input type="checkbox" name="color" value="blue">
                     <span style="color:red"><i class="fa fa-camera-retro fa-fw"></i></span>
@@ -46,7 +46,7 @@
                         </label>
                     <label><input type="checkbox" name="color" value="blue">
                     <span style="color:red"><i class="fa fa-refresh fa-fw"></i></span>
-                        </label>
+                    </label>
                 </div>
                 <script>
                     let b = Array.from(document.getElementById('review_icon_selects').children);
