--- a/static/css/normalUserBaseTemplate.css
+++ b/static/css/normalUserBaseTemplate.css
@@ -50,10 +50,6 @@
   background-color: #F4DBE3;
 }
 
-#userInfo {
-  display: inline-block;
-}
-
 #search-form-div {
   height: 100%;
 }
@@ -85,14 +81,14 @@
 }
 
 #userInfo {
-  display: inline-block;
-  height: 50px;
-  float: left;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
-.nav-item {
-  display: inline-block;
-  float: left;
+#userInfo > div {
+  width: 100%;
+  height: 100%;
 }
 
 .bg-red-500 {
