--- a/static/css/normalUserBaseTemplate.scss
+++ b/static/css/normalUserBaseTemplate.scss
@@ -45,9 +45,6 @@
 .drpd-sub:hover{
     background-color:#F4DBE3;
 }
-#userInfo{
-    display:inline-block;
-}
 #search-form-div{
     height:100%;
 }
@@ -74,13 +71,13 @@
     justify-content:center;
 }
 #userInfo{
-    display:inline-block;
-    height:50px;
-    float:left;
+    width:100%;
+    align-items:center;
+    justify-content:center;
 }
-.nav-item{
-    display:inline-block;
-    float:left;
+#userInfo>div{
+    width:100%;
+    height:100%;
 }
 .bg-red-500{
     background-color: $red-500;
