--- a/static/css/normalUserInfoCheckTemplate.scss
+++ b/static/css/normalUserInfoCheckTemplate.scss
@@ -1,16 +1,8 @@
 @import "color.scss";
-#others{
+div#others{
     border:2px solid $red-700;
 }
-#infoCheckAndUpdate{
-    height:89.8%;
-}
-#id_user_warn_count{
+
+input#id_user_warn_count{
     width:40px;
-}
-#reviews{
-}
-#reviews_div{
-    height:70.2%;
-    overflow-y:scroll;
 }
