--- a/templates/normal_user_review_write.html
+++ b/templates/normal_user_review_write.html
@@ -6,30 +6,35 @@
     <link rel="stylesheet" href="{% static 'css/normalUserReviewWriteTemplate.css' %}">
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <div id="icons" style="position:relative; display:none; float:left; height:500px; width:200px; border:1px solid green;"></div>
-    <div style="width: 51.5vw; margin: 0 auto">
+    <div style="width: 100%; height: 100%;">
         <form id="text_review" action="#" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            <div style="height: 8.8vh; width: 100%; padding-top: 1.9vh; display: flex">
-                <div style="background-color: #A23355; color: white; width: 5.5vw; height: 5vh;
-                        text-align: center; margin: 0 auto">주소</div>
-                <input id="id_address" style="float: right; height: 5vh; border-color: #A23355;
+            <div id="tr1">
+                <div style="background-color: #A23355 ; color: white; height:100%; width: 10.61% ;
+                        text-align: center; margin: 0 auto" id="review_address">주소</div>
+                <input id="id_address" style="float: right; border-color: #A23355;
                         flex:1" name="address" required>
+                <script>
+                    let a = (document.getElementById('room_search_filter').offsetHeight/16).toString()+'rem';
+                    document.getElementById('room_search_filter').style.fontSize=a;
+                </script>
             </div>
-            <div style="height: 7.5vh; width: 100%; padding-top: 2.5vh">
-                <input style="width: 100%; height: 5vh; text-align: left; border-color: #B3B3B3" name="title"
-                       placeholder="제목을 입력하세요">
-            </div>
-            <div style="padding-top: 2.5vh">
-                <input style="height: 43.3vh; width: 100%; border-color: #B3B3B3" name="review_sentence"
-                       placeholder="리뷰 본문을 입력하세요">
-            </div>
-            <div style="padding-top: 3vh">
-                <ul class="image-preview"></ul> {# 업로드한 이미지 띄우는 부분 #}
-
-                <div style="float: right">
-                    <input type="file" class="real-upload" accept="image/*" multiple id="images" name="images">
-                    <input value="리뷰 등록" type="submit" style="background-color: #A4A1A1; border-color:#888888;
-                    color: white">
+            <div id="tr2">
+                <div style="height: 9.09%; width: 100%; ">
+                    <input style="height:100%;width: 100%; text-align: left; border-color: #B3B3B3" name="title"
+                           placeholder="제목을 입력하세요">
+                </div>
+                <div style="height: 58.7%; padding-top: 2.604%">
+                    <input style="height: 100%; width: 100%; text-align:left; border-color: #B3B3B3" name="review_sentence"
+                           placeholder="리뷰 본문을 입력하세요">
+                </div>
+                <div style="padding-top: 3.038%">
+                    <ul class="image-preview"></ul> {# 업로드한 이미지 띄우는 부분 #}
+                    <div style="float: right">
+                        <input type="file" class="real-upload" accept="image/*" multiple id="images" name="images">
+                        <input value="리뷰 등록" type="submit" style="background-color: #A4A1A1; border-color:#888888;
+                        color: white">
+                    </div>
                 </div>
             </div>
         </form>
