리뷰작성페이지 비율

--- a/templates/normal_user_review_list.html
+++ b/templates/normal_user_review_list.html
@@ -22,7 +22,7 @@
                         <div class="review_icons">
                             {% for icon in review.includedIcon %}
                                 <div class="icon">
-
+                                    <a style="width:3.47%;height:4.04%;"
                                 </div>
                             {% endfor %}
                         </div>
