--- a/templates/normal_user_info_check.html
+++ b/templates/normal_user_info_check.html
@@ -14,7 +14,7 @@
 </script>
 {% endif %}
 <link rel="stylesheet" href="{% static 'css/normalUserInfoCheckTemplate.css' %}">
-<div id="infoCheckAndUpdate" style="height:32vh;">
+<div id="infoCheckAndUpdate" style="height:29.7%; outline: darkred 2px solid">
     <!-정보 확인 및 수정을 위한 공간 / 폼을 통해 정보 확인 및 갱신-->
     <h1>회원 정보 설정</h1>
     <form method="POST" enctype="multipart/form-data" action="/change_user_info/" onsubmit="get_layout()">
@@ -28,10 +28,10 @@
         </div>
     </form>
     <p>
-        경고 횟수 : <span>{{user.uWarnCount}}</span>회
+        활동 상태 : <span>{{user|check_active}}</span>
     </p>
     <p>
-        활동 상태 : <span>{{user|check_active}}</span>
+        경고 횟수 : <span>{{user.uWarnCount}}</span>회
     </p>
 </div>
 
