--- a/templates/review_search.html
+++ b/templates/review_search.html
@@ -98,4 +98,25 @@
         </form>
     </div>
 {% endblock %}
+{% block info %}
+<div style ="border-bottom: solid 2px #B3B3B3 ; width:100%; height:10.6% ;padding:3.47% 8.854% 0.5% 6.07%;">
+	    <input type="text"style="width: 60.7%; height:100%;" placeholder="검색어 입력">
+	    <button style = "width: 5.2%; height:100%;">검</button>
 
+    <div style="word-spacing:15px; float:right; ">
+        <div style="display: inline-block;">
+            <select id="sort_select_box" name="sort_select_box" onchange="sort()">
+                <option value="1">최신 순</option>
+                {#            현재 주소에서 &sorted=1 파라미터 붙을때#}
+                {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=1 #}
+                <option value="2">추천 순</option>
+                {#            현재 주소에서 &sorted=2 파라미터 붙을때#}
+                {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=2 #}
+                <option value="3">정확도 순</option>
+                {#            현재 주소에서 &sorted=3 파라미터 붙을때#}
+                {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=3 #}
+            </select>
+        </div>
+    </div>
+</div>
+{% endblock %}
