--- a/templates/room_test3-1.html
+++ b/templates/room_test3-1.html
@@ -3,12 +3,14 @@
 {% block main_contents %}
     {% block info %}
 <link rel="stylesheet" href="{% static 'css/roomTest31Template.css' %}">
-<div style ="background-color: lightgreen; width:100%; height: 105px;">
-    <div>
+<div style ="outline: solid 2px #0dcaf0 ; width:100%; height: 10.6%; padding: 4.04% 0px 5% 7.07%">
+    <div style = "width: 30%; height:100%;">
 	    <input type="text" placeholder="검색어 입력">
-	    <button>검색</button>
+	    <button style = "width: 8.5%; height:57.14% ;">검색</button>
     </div>
-    <div style="word-spacing:15px; float:right; margin : 2.98vh; ">
+</div>
+
+    <div style="word-spacing:15px; float:right; ">
         <div style="display: inline-block;">
         <select id="sort_select_box" name="sort_select_box" onchange="sort()">
             <option value="1">최신 순</option>
@@ -23,6 +25,5 @@
         </select>
             </div>
         </div>
-</div>
     {% endblock %}
 {% endblock %}
