상단메뉴: 소개 페이지 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 {% url 'normalUserRoomSearch' as normalUserRoomSearch %}
 {% url 'normalUserReviewRead' as normalUserReviewRead %}
 {% url 'wroteReviews' as wroteReviews %}
+{% url 'introduction' as introduction %}
 
 <!DOCTYPE html>
 <html lang="en">
