--- a/templates/normal_user_base.html
+++ b/templates/normal_user_base.html
@@ -9,7 +9,7 @@
 <div class="col-1"></div>
 <div class="col-1">
     <div id="introduce" class="drpd">
-        <div onclick="window.location.replace('#')">
+        <div onclick="window.location.replace('{{introduction}}')">
             소개
         </div>
     </div>
